@@ -1,6 +1,10 @@
+2006-06-04  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/pthread/pthread.h: Add pthread_equal inline version.
+
 2006-05-15  Ulrich Drepper  <drepper@redhat.com>
 
-	* sysdeps/unix/sysv/linux/fork.h: Makr __fork_handlers as hidden.
+	* sysdeps/unix/sysv/linux/fork.h: Mark __fork_handlers as hidden.
 
 2006-05-11  Ulrich Drepper  <drepper@redhat.com>
 
